tools/tests/errors/surf_sw_01.ki
# a switch with two String cases of the same value is a duplicate
switch "a":
    case "x":
        discard 1
    case "x":
        discard 2
